# agentkit

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: README.zh-CN.md  index.md
docs/agentkit/: index.md
docs/agentkit/api/: agent.md  cli.md  config.md  errors.md  llm.md  tools.md  tracing.md  workspace.md
docs/agentkit/concepts/: agent-lifecycle.md  architecture.md  budgets.md  llm-providers.md  tools-system.md  tracing.md  workspace.md
docs/agentkit/development/: changelog.md  contributing.md
docs/agentkit/getting-started/: configuration.md  installation.md  quickstart.md
docs/agentkit/guides/: agent-from-config.md  cli-usage.md  custom-llm-provider.md  custom-tools.md
examples/: config.openai.yaml  config.vllm.yaml
src/agentkit/: __init__.py  constants.py  errors.py
src/agentkit/agent/: __init__.py  agent.py  budgets.py  report.py  tool_runtime.py
src/agentkit/cli/: __init__.py  main.py
src/agentkit/config/: __init__.py  loader.py  provider_defaults.py  schema.py
src/agentkit/llm/: __init__.py  base.py  factory.py  types.py  usage.py
src/agentkit/llm/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py  qwen_provider.py  vllm_provider.py
src/agentkit/runlog/: __init__.py  events.py  jsonl.py  recorder.py  sinks.py
src/agentkit/tools/: __init__.py  base.py  loader.py  registry.py  types.py
src/agentkit/workspace/: __init__.py  fs.py  layout.py
tests/: conftest.py  test_agent_components.py  test_agent_factory.py  test_agent_from_config.py  test_agent_run.py  test_anthropic_provider.py  test_cli_main.py  test_config_loader.py  test_config_schema.py  test_fs_tools.py  test_gemini_provider.py  test_llm_types.py  test_llm_usage.py  test_openai_provider.py  test_qwen_provider.py  test_reasoning_roundtrip.py  test_runlog.py  test_status_reason_mapping.py  test_tool_registry.py  test_tools_loader.py  test_tracer.py  test_tracing_events.py  test_vllm_provider.py
